fixed overflow on body

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 body {
   justify-content: center;
-  min-height: 100%;
+  height: 100vh;
   background: #000000;
   /* overflow: hidden; */
   padding: 10px;
@@ -26,7 +26,7 @@ body {
 .container {
   overflow: auto;
   scroll-snap-type: y mandatory;
-  height: 100vh;
+  height: 100%;
 }
 .slide {
   scroll-snap-align: center;
@@ -91,7 +91,7 @@ body {
   display: flex;
   overflow: auto;
   scroll-snap-type: x mandatory;
-  height: 90vh;
+  height: 90%;
   width: 90%;
   margin: 0 auto;
   background-color: green;
